port modifiers